<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_file_name">about.html</string>
    <string name="help_file_name">help.html</string>
    <string name="about_file_encoding">utf-8</string>
    <string name="app_name">PiCorner</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="secondary_menus_general">General</string>
    <string name="secondary_menus_search">Search</string>
    <string name="f_interesting_photos">Explore</string>
    <string name="f_login">Sign In</string>
    <string name="f_my_photos">My Photo Stream</string>
    <string name="f_my_fav">My Favorites</string>
    <string name="f_my_contacts">Friends\' Photos</string>
    <string name="f_my_popular">My Populars</string>
    <string name="ig_my_feeds">My Feeds</string>
    <string name="ig_my_likes">My Likes</string>
    <string name="ig_my_photos">My Photos</string>
    <string name="menu_item_text_default">Default</string>
    <string name="menu_item_text_offline">Offline</string>
    <string name="px_editors">Editors\' Choice</string>
    <string name="px_upcoming">Upcoming</string>
    <string name="px_fresh_today">Fresh Today</string>
    <string name="px_my_flow">Friends\' Photos</string>
    <string name="menu_header_flickr">Flickr</string>
    <string name="menu_header_flickr_sets">Photo Sets</string>
    <string name="menu_header_flickr_groups">Photo Groups</string>
    <string name="ig_popular">Popular Photos</string>
    <string name="menu_header_ig">Instagram</string>
    <string name="menu_header_px500">500px</string>
    <string name="menu_header_friends">Friends</string>
    <string name="cmd_name_about">About</string>
    <string name="f_my_photo_sets">My Photo Sets</string>
    <string name="f_my_groups">My Groups</string>
    <string name="f_my_galleries">My Galleries</string>
    <string name="cmd_name_flickr_tag_search">Flickr Tag Search</string>
    <string name="cmd_name_ig_loc_search">Instagram: Nearby Photos</string>
    <string name="cmd_name_500px_search">500px Search</string>
    <string name="fail_to_oauth">Failed to access your %s account, please try
		again</string>
    <string name="auth_gen_req_token">Generating the authorization request.</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_save_local">Save to Device</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_like_photo">Like</string>
    <string name="menu_item_set_wallpaper">Set as Wallpaper</string>
    <string name="menu_item_detail">Details</string>
    <string name="menu_item_ig_follow_user">Follow</string>
    <string name="menu_item_ig_unfollow_user">Unfollow</string>
    <string name="menu_item_owner_photos">Owner Photos</string>
    <string name="menu_item_org_my_flickr_photo">Sets</string>
    <string name="menu_item_mng_my_flickr_group">Groups</string>
    <string name="menu_item_f_user_web_site">Owner\'s Website</string>
    <string name="menu_item_vote">Vote</string>
    <string name="main_menu_filter_hint">menu filter</string>
    <string name="menu_item_offline_on_off">Offline</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_slide_show">Slideshow</string>
    <string name="menu_item_back">Back</string>
    <string name="menu_item_offline_download">Download</string>
    <string name="menu_item_offline_export_photos">Export</string>
    <string name="menu_item_offline_delete_photos">Delete</string>
    <string name="menu_item_my_frequently_used_tags">My Flickr Tags</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_crt_ps" tools:ignore="TypographyEllipsis">New Photo Set...</string>
    <string name="menu_item_flickr_group_search">Flickr Group Search</string>
    <string name="menu_item_flickr_group_info" tools:ignore="TypographyEllipsis">Group Detail...</string>
    <string name="menu_item_org_photo_set">Organize in Photo Sets</string>
    <string name="menu_item_add_to_group">Add to Groups</string>
    <string name="menu_item_view_exif">View EXIF</string>
    <string name="menu_item_view_on_map">View on Map</string>
    <string name="menu_item_comment">Comment</string>
    <string name="wait_for_image_loading" tools:ignore="TypographyEllipsis">Loading, please wait...</string>
    <string name="share_via">shared from</string>
    <string name="loading_photos" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="msg_wallpaper_changed">Wallpaper changed.</string>
    <string name="like_photo_done">Liked!</string>
    <string name="msg_pls_input_photo_set_name">Please specify photo set name.</string>
    <string name="msg_creating_photo_set" tools:ignore="TypographyEllipsis">Creating photo set...</string>
    <string name="msg_photo_set_crted">Photo set \'%s\' created.</string>
    <string name="msg_photo_set_creation_fail">Failed to create photo set \'%s\'.</string>
    <string name="flickr_detail_general_title">General</string>
    <string name="flickr_detail_comments_title">Comments</string>
    <string name="flickr_detail_exif_title">EXIF</string>
    <string name="flickr_detail_map">Map</string>
    <string name="ig_like_users">Like Users</string>
    <string name="detail_gen_title_section">Title</string>
    <string name="detail_flickr_group_rules">Rules</string>
    <string name="detail_gen_author_section">Author</string>
    <string name="detail_gen_description_section">Description</string>
    <string name="photo_no_title">NO TITLE</string>
    <string name="flickr_group_no_rules">NO RULES</string>
    <string name="photo_no_desc">NO DESCRIPTION</string>
    <string name="photo_no_comments">No comment now.</string>
    <string name="photo_no_exif">No EXIF Information.</string>
    <string name="photo_no_like_users">No likes now.</string>
    <string name="msg_comment_added">Comment added.</string>
    <string name="hint_add_comment">comment here.</string>
    <string name="pls_sing_in_first">Please sign in first.</string>
    <string name="msg_pls_turn_on_location">Please turn on your network location setting.</string>
    <string name="msg_like_photo_fail" tools:ignore="TypographyEllipsis">Ooops...</string>
    <string name="msg_working" tools:ignore="TypographyEllipsis">Working...</string>
    <string name="msg_loading_more_photo_of_user" tools:ignore="TypographyEllipsis">Loading photos of %s...</string>
    <string name="msg_by_author_name">by</string>
    <string name="msg_your_own_photo">This is you.</string>
    <string name="msg_ig_chg_relationship_failed">Unable to follow/unfollow.</string>
    <string name="msg_no_photo_returned">Ooops, no photo returned for \'%s\'</string>
    <string name="msg_photo_saved_locally">Photo saved as \'%s\'</string>
    <string name="msg_photo_save_exists">Photo already saved.</string>
    <string name="msg_photo">photo</string>
    <string name="msg_px500_auth_fail">Failed to sign into 500px.</string>
    <string name="msg_px_error_fetch_user_profile">Error to get my 500px user profile.</string>
    <string name="msg_500px_photo_voted">Voted!</string>
    <string name="msg_500px_photo_vote_failed">You may already voted!</string>
    <string name="msg_fail_get_f_perm">Failed to get photo visibility information.</string>
    <string name="msg_pls_input_photo_title">Please input photo title.</string>
    <string name="msg_photo_meta_save_done">Photo meta information updated!</string>
    <string name="msg_photo_meta_save_fail">Errors encountered when update photo information.</string>
    <string name="msg_pls_enable_offline_first">You need to enable the offline view feature first, hit \'OK\' to go the setting page to turn it on.</string>
    <string name="msg_pls_enable_offline_for_ps">You need to enable offline on this photo set first.</string>
    <string name="msg_loading_my_friends" tools:ignore="TypographyEllipsis">Loading friends...</string>
    <string name="msg_loading_my_tags" tools:ignore="TypographyEllipsis">Loading my tags...</string>
    <string name="msg_tag_filter">Tag filter</string>
    <string name="msg_contact_filter">Filter</string>
    <string name="msg_thanks_rating">Thank you for rating.</string>
    <string name="msg_loading_photo_sets" tools:ignore="TypographyEllipsis">Loading my photo sets...</string>
    <string name="msg_loading_my_groups" tools:ignore="TypographyEllipsis">Loading my photo groups...</string>
    <string name="msg_loading_my_galleries" tools:ignore="TypographyEllipsis">Loading my galleries...</string>
    <string name="msg_no_photo_sets">No photo sets yet.</string>
    <string name="msg_no_photo_groups">No photo groups yet.</string>
    <string name="msg_no_photo_galleries">No galleries yet.</string>
    <string name="msg_crt_ps_hint">title</string>
    <string name="msg_searching_flickr_group" tools:ignore="TypographyEllipsis">Searching groups...</string>
	<string name="msg_no_groups_found">No group(s) found.</string>
	<string name="msg_join_group_condition">You need to read the group rule and agree to it before joining. Join the group?</string>
	<string name="msg_join_group_succeeded">You\'ve joined the group.</string>
    <string name="msg_flickr_tag_search_label">Flickr tag search</string>
    <string name="msg_flickr_tag_search_tags">Tags:</string>
    <string name="msg_flickr_tag_search_mode">Search mode:</string>
    <string name="msg_flickr_tag_search_hint">separate by space</string>
    <string name="msg_flickr_tag_search_empty_tag">Please input tag to search.</string>
    <string name="msg_flickr_my_tag_search">Please select at least one tag to search.</string>
    <string name="msg_flickr_tag_search_mode_and">and</string>
    <string name="msg_flickr_tag_search_mode_or">or</string>
    <string name="msg_flickr_tag_search_in_common">Search in Commons</string>
    <string name="msg_flickr_tag_search_has_geo">Has GEO information</string>
    <string name="msg_500px_search_title">500px Search</string>
    <string name="msg_500px_teram">Term:</string>
    <string name="msg_500px_tag">Tags:</string>
    <string name="msg_pls_input_term_and_tag">Please input either term or tag.</string>
    <string name="cd_500px_search_cmd">500px search: %s</string>
    <string name="try_swipe_left">Try swipe left</string>
    <string name="try_swipe_right">Try swipe right</string>
    <string name="cmd_help_label">Help</string>
    <string name="button_join_flickr_group">Join</string>
    <string name="flickr_photo_perm_private">Only You</string>
    <string name="flickr_photo_perm_friend">Your friends</string>
    <string name="flickr_photo_perm_family">Your family</string>
    <string name="flickr_photo_perm_public">Anyone</string>
    <string name="flickr_photo_perm_title">Who can see this photo:</string>
    <string name="msg_flickr_photo_perm_hint">Note: Changing from public to private will remove all favorites.</string>
    <string name="msg_offline_export_path_hint">Export path</string>
    <string name="msg_offline_export_path_label">Please specify the folder name, the folder will be created in \'%s\' if not exists.</string>
    <string name="msg_offline_export_overwrite">Overwrite existing photos.</string>
    <string name="pref_cat_general">General</string>
    <string name="photo_grid_cache_size">Photo cache size (MB)</string>
    <string name="summary_photo_grid_cache_size">Photo cache is to improve the proformance when you\'re browsing photos, you can specify how much disck space to be used as photo cache.</string>
    <string name="pref_cat_offline">Offline</string>
    <string name="pref_only_user_wifi">WIFI only</string>
    <string name="summary_pref_only_user_wifi">Only use wifi to download photos, Uncheck will download photos when connected to cellular network.</string>
    <string name="offline_download_timer">Offline Timer</string>
    <string name="summary_offline_download_timer">How often to check photo set updates.</string>
</resources>