<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/views" />

            <TextView
                android:id="@+id/flickr_detail_gen_views"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/comments" />

            <TextView
                android:id="@+id/flickr_detail_gen_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/favourites" />

            <TextView
                android:id="@+id/flickr_detail_gen_favs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            style="@style/PhotoDetailSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/detail_gen_title_section" />

        <EditText
            android:id="@+id/edit_f_p_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:imeOptions="actionNone"
            android:inputType="text" >
        </EditText>

        <TextView
            style="@style/PhotoDetailSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center"
            android:text="@string/detail_gen_description_section" />

        <EditText
            android:id="@+id/edit_f_p_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6" >
        </EditText>

        <TextView
            style="@style/PhotoDetailSection"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="left|center"
            android:text="@string/flickr_photo_perm_title" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_f_p_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/flickr_photo_perm_private" />

            <CheckBox
                android:id="@+id/cb_f_p_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/flickr_photo_perm_friend" />

            <CheckBox
                android:id="@+id/cb_f_p_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/flickr_photo_perm_family" />

            <RadioButton
                android:id="@+id/rb_f_p_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flickr_photo_perm_public" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/msg_flickr_photo_perm_hint" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>