<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_item_back_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/menu_frame_bg_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_offline_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/offline_action_button_bg"
            android:drawableLeft="@drawable/ic_action_back"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_back"
            android:textColor="@color/comment_bg_color" />

        <CheckBox
            android:id="@+id/btn_enable_offline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/offline_action_button_bg"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_offline_on_off"
            android:textColor="@color/comment_bg_color" />

        <TextView
            android:id="@+id/btn_offline_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/offline_action_button_bg"
            android:drawableLeft="@drawable/ic_action_refresh"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_refresh"
            android:textColor="@color/comment_bg_color" />

        <TextView
            android:id="@+id/btn_offline_slide_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/offline_action_button_bg"
            android:drawableLeft="@drawable/ic_action_slide_show"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_slide_show"
            android:textColor="@color/comment_bg_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_offline_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/offline_action_button_bg"
            android:drawableLeft="@drawable/ic_action_refresh_download"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_offline_download"
            android:textColor="@color/comment_bg_color" />

        <TextView
            android:id="@+id/btn_offline_delete_photos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/offline_action_button_bg"
            android:drawableLeft="@drawable/ic_action_remove_offline_photo"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/menu_item_offline_delete_photos"
            android:textColor="@color/comment_bg_color" />
    </LinearLayout>

</HorizontalScrollView>