<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_alert_dlg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"
        android:text="@string/msg_offline_export_path_label" />

    <EditText
        android:id="@+id/edit_alert_dlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="10dip"
        android:gravity="fill_horizontal"
        android:hint="@string/msg_offline_export_path_hint"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cb_offline_export_overwrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="20dip"
        android:text="@string/msg_offline_export_overwrite" />

</LinearLayout>